--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,9 @@ dependencies {
 
     implementation "com.squareup.okhttp3:okhttp:4.10.0"
     implementation "com.squareup.okhttp3:logging-interceptor:4.8.0"
+
+    // room database dependencies
+    implementation "androidx.room:room-runtime:2.2.4"
+    kapt "androidx.room:room-compiler:2.2.4"
+    implementation "androidx.room:room-ktx:2.2.5"
 }
