--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,15 +19,22 @@
         <activity
             android:name=".presentation.activity.MainActivity"
             android:exported="true">
+
+        </activity>
+
+        <activity android:name=".BlankClass"
+            android:exported="true">
+
+        </activity>
+
+        <activity android:name=".RegisterActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
 
-        <activity android:name=".BlankClass"
-            android:exported="true">
 
         </activity>
     </application>
