--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".base.MyApplication"
@@ -17,13 +16,18 @@
         android:theme="@style/Theme.DependencyInjection_Retrofit"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.activity.MainActivity"
-            android:exported="true">
+            android:name=".presentation.activity.RegisterActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".presentation.activity.MainActivity"
+            android:exported="true">
+
         </activity>
     </application>
 
