--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,18 +17,9 @@
         android:theme="@style/Theme.DependencyInjection_Retrofit"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.activity.MainActivity"
+            android:name=".presentation.activity.LoginActivity"
             android:exported="true">
 
-        </activity>
-
-        <activity android:name=".BlankClass"
-            android:exported="true">
-
-        </activity>
-
-        <activity android:name=".RegisterActivity"
-            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,6 +28,23 @@
 
 
         </activity>
+
+        <activity android:name=".BlankClass"
+            android:exported="true">
+
+        </activity>
+
+        <activity android:name=".presentation.activity.RegisterActivity"
+            android:exported="true">
+
+
+        </activity>
+
+        <activity android:name=".presentation.activity.UpdateActivity"
+            android:exported="true">
+
+        </activity>
+
     </application>
 
 </manifest>
