--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,14 +70,14 @@ dependencies {
 
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
 
+    //http dependencies
     implementation "com.squareup.okhttp3:okhttp:4.10.0"
     implementation "com.squareup.okhttp3:logging-interceptor:4.8.0"
 
-    def room_version = "2.5.2"
 
-    implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
-
+    implementation "androidx.room:room-runtime:2.5.2"
+    kapt "androidx.room:room-compiler:2.5.2"
     // To use Kotlin annotation processing tool (kapt)
-    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:2.5.2"
+
 }
