--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
 
     <application
@@ -18,33 +18,36 @@
         tools:targetApi="31">
 
 
-        <activity android:name=".BlankClass"
-            android:exported="true">
-
-        </activity>
-
-        <activity android:name=".presentation.activity.RegisterActivity"
-            android:exported="true">
-
-
-        </activity>
         <activity
-            android:name=".presentation.activity.LoginActivity"
+            android:name=".presentation.activity.RegisterActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
+        </activity>
+        <activity
+            android:name=".presentation.activity.LoginActivity"
+            android:exported="true">
+
+
+
 
         </activity>
 
-        <activity android:name=".presentation.activity.UpdateActivity"
+        <activity
+            android:name=".presentation.activity.UpdateActivity"
             android:exported="true">
 
         </activity>
+
+        <activity android:name=".presentation.activity.DeleteActivity"
+            android:exported="true"
+
+
+            ></activity>
 
     </application>
 
